@@ -1,3 +1,9 @@
+Thu May 28 14:23:47 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
+
+    * unittests/test_search.php,
+    * flax/flaxclient.php: Added searchSimilar() function and unittests
+      contributed by Ian Barber <ian@ibuildings.nl>.
+
 Fri May 22 17:16:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/flaxclient.php: Allow the / at the end of the base url to be
